[workspace]
resolver = "2"

members = [
    "lang",
    "util",
    "sort",
    "main",
    "mandelbrot",
]

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes -g or `--cfg ndebug`

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false

# The testing profile, used for `cargo test`
[profile.test]
opt-level = 0
debug = true

# The benchmarking profile, used for `cargo bench`
[profile.bench]
opt-level = 3
debug = false
